--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,7 +395,7 @@ tr:nth-child(odd)	{ background-color:#fff; }
 
 /* NAVIGATION */
 .navigation {
-	width: 15%;
+	width: 11%;
 	float: left;
 	min-height: 500px;
 	clear: left;
